--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <a class="nav-link active" href="pagina4.html">Tienda</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="pagina3.html">Registrame</a>
+                    <a class="nav-link active" href="pagina3.html">Contacto</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Contacto</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Servicios</a>
                   </li>
                   
                 </ul>
