--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link active" href="pagina4.html">Tienda</a>
+                    <a class="nav-link active" href="pagina4.html">Servicios</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="pagina3.html">Contacto</a>
