--- a/pagina4.html
+++ b/pagina4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport Dream Team Servicios</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 </head>
 <body class="bg-dark text-white">
@@ -19,9 +19,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">HOLA</a>
-                  </li>
+                  
                   <li class="nav-item">
                     <a class="nav-link active" href="https://niketeam.nike.com/en/en_US/nts/">Planes FIT</a>
                   </li>
@@ -44,6 +42,8 @@
     </header>
 
     <main>
+
+                <h1>bienvenidos</h1>
         
         <div class="container">
                 <p class="text-center p-5">
