se creo el footer

--- a/pagina4.html
+++ b/pagina4.html
@@ -131,9 +131,9 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <p class="text-center p-5">
-                    <p>Sebastian Castro Andrade </p>
+                    <p>Sport Dream Team inc </p>
                     <p>Medellin,Antioquia,colombia</p> 
-                     <p>2021</p> 
+                     <p>2024</p> 
                     <p>Sport Dream Team &#9918;</p> 
                       <p> &copy;</p>
                     </p>
@@ -146,8 +146,8 @@
                 <div class="col-12 col-md-6">
                     <p class="text-center p-5">
                     <p>Contacto:</p>
-                    <p>sebascastro102537@gmail.com &#9997;</p>
-                    <p>3043257191 &#9743;</p>
+                    <p>sportdream@gmail.com &#9997;</p>
+                    <p>3043250191 &#9743;</p>
                     <p>Sport Dream FC </p>
                     <a href="https://github.com/sebas102537/carperdocs14">Github</a>
                     </p>
