yo agregue una nueva funcion a la pagina de servicios

--- a/pagina4.html
+++ b/pagina4.html
@@ -21,10 +21,10 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   
                   <li class="nav-item">
-                    <a class="nav-link active" href="https://niketeam.nike.com/en/en_US/nts/">Planes FIT</a>
+                    <a class="nav-link active" href="https://niketeam.nike.com/en/en_US/nts/">Mundo Nike</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="">Indumentaria</a>
+                    <a class="nav-link active" href="https://nicepage.com/es/html-templates/preview/gimnasio-de-gama-completa-1171691?device=desktop">Mundo Deportivo</a>
                   </li>
                   
                   <li class="nav-item">
