--- a/pagina4.html
+++ b/pagina4.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" href="https://niketeam.nike.com/en/en_US/nts/">Mundo Nike</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="https://nicepage.com/es/html-templates/preview/gimnasio-de-gama-completa-1171691?device=desktop">Mundo Deportivo</a>
+                    <a class="nav-link active" href="https://nicepage.com/es/html-templates/preview/gimnasio-de-gama-completa-1171691?device=desktop">Clases fitness</a>
                   </li>
                   
                   <li class="nav-item">
@@ -60,7 +60,7 @@
                   </div>
 
                   <div class="carousel-item">
-                    <img src="img/nombres-para-tiendas-de-ropa-deportiva.jpg" class="d-block w-100 imagenes" alt="banner3">
+                    <img src="https://imagenes.eltiempo.com/files/image_1200_600/uploads/2022/04/11/62548083c068d.jpeg" class="d-block w-100 imagenes" alt="banner3">
                   </div>
 
                   <div class="carousel-item">
